# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "rpc"
version = "0.1.0"
authors = [ "Hyperledger Sawtooth Seth Maintainers" ]

[dependencies]
jsonrpc-core = "~8.0"
jsonrpc-http-server = "~8.0"
futures-cpupool = "~0.1"
clap = "~2.26"
protobuf = "~1.4.4"
#sawtooth_sdk = { git = "https://github.com/blockchaintp/sawtooth-core", branch = "1-0", version = "~0.1.0" }
sawtooth_sdk = { path = "/project/sawtooth-core/sdk/rust", version = "~0.1.0" }
uuid = { version = "~0.5", features = [ "v4" ] }
log = "~0.3"
simple-logging = "~1.0"
serde_json = "~1.0"
rpassword = "~1.0"
tiny-keccak = "~1.3"
rust-crypto = "~0.2"
